--- a/style.css
+++ b/style.css
@@ -7,31 +7,70 @@ body {
 }
 
 .keyboard-wrapper {
-    width: clamp(20em, 100%, 26.875em);
-    background-color: hsla(240, 100%, 70%, 0.3);
+    width: fit-content;
+    margin-inline: auto;
+    margin-block-start: 3rem;
+    background-color: transparent;
 
     .display {
+        height: 80px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-size: 3rem;
+        font-family: "Quantico", sans-serif;
+        text-align: end;
+        padding-inline-end: 0.5rem;
+        background-color: #14479915;
+        border: 2px solid #00d4ff;
+        border-radius: 10px;
+        cursor: pointer;
+        box-shadow: 0 0 10px rgba(0, 212, 255, 0.7), 0 0 20px rgba(0, 212, 255, 0.5), inset 0 0 15px rgba(0, 212, 255, 0.7);
+        margin-bottom: 1rem;
+        }
+
         background-color: hsla(0, 100%, 70%, 0.5);
     }
 
     .keyboard {
         display: flex;
         flex-direction: column;
-        gap: 0.25em;
+        gap: 0.45em;
     }
 
     .keyboard > .keyboard-row {
         display: flex;
-        gap: 0.25em;
+        gap: 0.45em;
 
         .input {
             flex: 1;
             text-align: center;
+            align-content: center;
             background-color: hsl(208, 100%, 97%);
+            font-family: "Quantico", sans-serif;
+            font-size: 3rem;
+            background-color: #144699;
+            border: 2px solid #00d4ff;
+            border-radius: 10px;
+            cursor: pointer;
+            box-shadow: 0 0 10px rgba(0, 212, 255, 0.7), 0 0 20px rgba(0, 212, 255, 0.5), inset 0 0 15px rgba(0, 212, 255, 0.7);
         }
+    }
+
+    .num-field,
+    .equal-field,
+    .operation-field {
+        width: 75px;
+        height: 75px;
+    }
+
+    .clear-field {
+        height: 75px;
     }
 }
 
 .display {
-    min-height: 1.25rem;
+    font-size: 3rem;
+    font-family: "Quantico", sans-serif;
+    text-align: end;
+    padding-inline-end: 0.5rem;
 }
