--- a/style.css
+++ b/style.css
@@ -24,11 +24,9 @@ body {
         border: 2px solid #00d4ff;
         border-radius: 10px;
         cursor: pointer;
-        box-shadow: 0 0 10px rgba(0, 212, 255, 0.7), 0 0 20px rgba(0, 212, 255, 0.5), inset 0 0 15px rgba(0, 212, 255, 0.7);
+        box-shadow: 0 0 10px rgba(0, 213, 255, 0.7), 0 0 20px rgba(0, 212, 255, 0.5), inset 0 0 15px rgba(0, 212, 255, 0.7);
         margin-bottom: 1rem;
         }
-
-        background-color: hsla(0, 100%, 70%, 0.5);
     }
 
     .keyboard {
@@ -53,6 +51,7 @@ body {
             border-radius: 10px;
             cursor: pointer;
             box-shadow: 0 0 10px rgba(0, 212, 255, 0.7), 0 0 20px rgba(0, 212, 255, 0.5), inset 0 0 15px rgba(0, 212, 255, 0.7);
+            color: white;
         }
     }
 
